[package]
name = "git-time-machine"
version = "0.3.0"
edition = "2021"
authors = ["Dinakar Sarbada <dinakars777@gmail.com>"]
description = "🕰️ A beautiful TUI to undo ANY git mistake in 3 seconds"
license = "MIT"
repository = "https://github.com/dinakars777/git-time-machine"
keywords = ["git", "tui", "undo", "reflog", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-time-machine"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
